# musica_legacy_with_fltk

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs
src/components/: main_group.rs  mod.rs  setting_group.rs
src/constants/: color.rs  name.rs
src/errors/: common_error.rs  mod.rs
src/resources/: mod.rs
src/types/: client_event.rs  config.rs  file_info.rs  mod.rs  music_status.rs  state.rs
src/utils/: mod.rs  play_music.rs  read_files_list.rs  release_only.rs
