[package]
name = "musica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
fltk = { version = "^1.3", features = ["fltk-bundled"] }
thiserror = "1.0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minimp3 = "0.5.1"
rodio = "0.17.1"
rand = "0.8.5"